Fix alignment values

--- a/stylus/helpers/typography.styl
+++ b/stylus/helpers/typography.styl
@@ -28,7 +28,7 @@ typography-size()
 +fullhd()
   typography-size('fullhd')
 
-$alignments = {'centered': 'center', 'justified': 'justify', 'left': 'left', 'right': 'right'}
+$alignments = {'centered': center, 'justified': justify, 'left': left, 'right': right}
 
 for $alignment, $text-align in $alignments
   .has-text-{$alignment}
